2007-09-15  Elijah Newren  <newren gmail com>

	* configure.in: post-release version bump to 2.20.1

2007-09-15  Elijah Newren  <newren gmail com>

	* configure.in:
	* NEWS:
	2.20.0 release

2007-09-15  Elijah Newren  <newren gmail com>

	* src/session.c (warn_about_lame_clients_and_finish_interact):
	Patch from Alexey Rusakov to prevent a crash on logout with
	metacity subsequently not being restored in future sessions.
	Fixes #433253.

2007-09-01  Elijah Newren  <newren gmail com>

	* HACKING: update; cvs->svn & mention GConf needed
	* MAINTAINERS: Make it match idiotic format requirements (I love
	you Olav!)

2007-08-07  Thomas Thurman  <thomas@thurman.org.uk>

        * configure.in: post-release bump to 2.19.89.

2007-08-07  Thomas Thurman  <thomas@thurman.org.uk>

        * NEWS: 2.19.55 release.
	
2007-08-06  Thomas Thurman  <thomas@thurman.org.uk>

	If KEY_AUTO_RAISE_DELAY is undefined or non-integer, it is not treated
	as zero.

	* src/prefs.c (meta_prefs_init): check type of key, and behave sensibly
	if it's unexpected.
	* src/prefs.c (find_and_update_list_binding): remove old comment.

2007-08-03  Frederic Crozat  <fcrozat@mandriva.com>

	* src/delete.c: Fix mangled window title in "Force Quit"
	dialog when using non-UTF8 locale. Close #462734.

2007-08-02  Thomas Thurman  <thomas@thurman.org.uk>

        Move "close" to bottom of window menu; allow workspace list to appear
	at any position in the menu. Closes #104026.

	* src/menu.c (MetaMenuItemType): added new MENU_ITEM_WORKSPACE_LIST
        item.
	* src/menu.c (menuitems): reordered "close", added a workspace list.
	* src/menu.c (menu_item_new): return null for workspace lists.
	* src/menu.c (meta_window_menu_new): handle workspace lists.

2007-07-31  Thomas Thurman  <thomas@thurman.org.uk>

	* src/window.c (meta_window_show_menu): windows which are
	always on top have the "stick" menu option insensitive. (#460997).

2007-07-23  Thomas Thurman  <thomas@thurman.org.uk>
